Version 0.190

readelf: Support readelf -Ds, --use-dynamic --symbol.

Version 0.189 "Don't deflate!"

configure: eu-nm, eu-addr2line and eu-stack can provide demangled symbols
           when linked with libstdc++. Use --disable-demangler to disable.

           A new option --enable-sanitize-memory has been added for msan
           sanitizer support.

libelf: elf_compress now supports ELFCOMPRESS_ZSTD when build against
        libzstd

libdwfl: dwfl_module_return_value_location now returns 0 (no return type)
         for DIEs that point to a DW_TAG_unspecified_type.

elfcompress: -t, --type= now support zstd if libelf has been build with
             ELFCOMPRESS_ZSTD support.

backends: Add support for LoongArch and Synopsys ARCv2 processors.

Version 0.188 "no section left behind"

readelf: Add -D, --use-dynamic option.

debuginfod-client: Add $DEBUGINFOD_HEADERS_FILE setting to supply outgoing
                   HTTP headers. Add new function debuginfod_find_section.

debuginfod: Add --disable-source-scan option.

libdwfl: Add new function dwfl_get_debuginfod_client.
         Add new function dwfl_frame_reg.
         Add new function dwfl_report_offline_memory.

Version 0.187 "no zero negatives"

debuginfod: Support -C option for connection thread pooling.

debuginfod-client: Negative cache file are now zero sized instead of
                   no-permission files.

addr2line: The -A, --absolute option, which shows file names including
           the full compilation directory is now the default.  To get the
           old behavior use the new option --relative.

readelf, elflint: Recognize FDO Packaging Metadata ELF notes

libdw, debuginfo-client: Load libcurl lazily only when files need to
                         be fetched remotely. libcurl is now never
                         loaded when DEBUGINFOD_URLS is unset. And when
                         DEBUGINFOD_URLS is set, libcurl is only loaded